# Backend/Synonym_Test.DataTransferObjects/GetAllWordsResponseDto.cs
@@ -1,0 +1,7 @@
+﻿namespace Synonym_Test.DataTransferObjects;
+
+public sealed class GetAllWordsResponseDto
+{
+    public int Id { get; set; }
+    public string? Value { get; set; }
+}
