# Backend/Synonym_Test.DataTransferObjects/GetSynonymsRequestDto.cs
@@ -1,0 +1,6 @@
+﻿namespace Synonym_Test.DataTransferObjects;
+
+public sealed class GetSynonymsRequestDto
+{
+    public string? Value { get; set; }
+}
