# Backend/Synonyms_Test.Core/Responses/Response.cs
@@ -1,0 +1,9 @@
+﻿namespace Synonyms_Test.Core.Responses
+{
+    public class Response
+    {
+        internal Response(int[] errorCodes) => ErrorCodes = errorCodes;
+
+        public int[] ErrorCodes { get; set; }
+    }
+}
